--- a/public/ststic/study/css/mob.css
+++ b/public/ststic/study/css/mob.css
@@ -112,7 +112,7 @@
 .ab_cont .ab_box .notice .tab-hd li{width:120px; margin-right:15px ;}
 .ab_cont .ab_box .notice .tab-pal .img{ width:390px; height:270px;}
  .ab_box .notice .tab-pal .our_se {width:860px;}
-.tab-pal .our_se  .service{ height:100px; }
+/*.tab-pal .our_se  .service{ height:100px; }*/
 .tab-pal .our_se .map_img{ width:860px;}
 .tab-pal .our_se h1{ width:860px;}
 .tab-pal .our_se span{ width:860px;}
@@ -408,7 +408,7 @@
 	.tab-pal .team li .img_t{ width:100%; max-height:10rem; line-height:10rem; text-align:center}
 	.tab-pal .team li  .add{top:8.5rem; left:42%; }
 	.chilk_box { background:#fff; width:100%; position:fixed; top:0; left:0; height:auto; overflow:scroll}
-	.chilk_box .box_midd{ width:95%; overflow:scroll;padding:0!important; min-height:1000px}
+	.chilk_box .box_midd{ width:95%; overflow:scroll;padding:0!important; min-height:1000px;margin-top:30px}
 	.chilk_box .box_midd  .per_my{ width:95%;}
 	.chilk_box .box_midd  .per_my .img{ width:100%; margin:0 auto; text-align:center }
 	.chilk_box .box_midd  .per_my .img img{ vertical-align:middle; width:100%}
@@ -500,7 +500,7 @@
 
 	.must_cont .cont_right{  width:94%; padding:3%}
 	.xiugais .xiugai_box{ width:95%; background:#fff; margin:0 auto} 
-	.xiugais .xiugai_box  p  input{ width:90%}
+	.xiugais .xiugai_box  p  input,.xiugais .xiugai_box  p  select{ width:90%}
 	.xiugais .xiugai_box  p  textarea{ width:90%}
 	.xiugais .xiugai_box  p span{ width:90%; margin:0 auto; text-align:left}
 	.shequ_left .shequ_detail{  width:94%; padding:3%}
@@ -559,6 +559,11 @@
 @media screen and (max-width: 767px) and (min-width: 320px){
 	.hs_cont .hs_box .notice .tab-pal .img{
 		margin:0 auto;
+	}
+	.close_btn_new{
+		top:5px;
+		left:auto;
+		right:20px;
 	}
 }
 	
