--- a/appliaction/admin/view/content/car/edit.html
+++ b/appliaction/admin/view/content/car/edit.html
@@ -36,7 +36,7 @@
 						<div class="form-group">
 							<label class="control-label col-sm-3">
 								<span class="text-danger"></span>
-								<span>里程数[万公里]</span>
+								<span>里程数[公里]</span>
 							</label>
 							<div class="col-sm-8">
 								<input type="text" value="{??$data['mileage']}" name="mileage" placeholder="里程数"  disabled class="form-control">	
