--- a/appliaction/app/view/h5/index/car/detail.html
+++ b/appliaction/app/view/h5/index/car/detail.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="i-title">
-        <a href="javascript:;">
+        <a href="javascript:;" onclick="openApp()">
             <img src="/ststic/kdqc/images/i-left.png">
         </a>
         <div>
@@ -120,7 +120,7 @@
             <img src="/ststic/kdqc/images/i-star.png">
             <img src="/ststic/kdqc/images/i-star.png">
             <span>{$data['shop']['credit_level']['value']}分</span>
-            <a href="javascript:;">
+            <a href="javascript:;" onclick="openApp()">
                 <img src="/ststic/kdqc/images/i-right2.png">
             </a>
         </div>
@@ -144,28 +144,67 @@
     <div class="i-footer">
         <ul>
             <li>
-                <a href="javascript:;">
+                <a href="javascript:;" onclick="openApp()">
                     <img src="/ststic/kdqc/images/i-star-b.png">
                     <p>收藏</p>
                 </a>
             </li>
             <li>
-                <a href="javascript:;">
+                <a href="javascript:;" onclick="openApp()">
                     <img src="/ststic/kdqc/images/i-call.png">
                     <p>电话咨询</p>
                 </a>
             </li>
             <li>
-                <a href="javascript:;">
+                <a href="javascript:;" onclick="openApp()">
                     <img src="/ststic/kdqc/images/i-zx.png">
                     <p>咨询</p>
                 </a>
             </li>
             <li>
-                <a href="javascript:;">咨询看车</a>
+                <a href="javascript:;" onclick="openApp()">咨询看车</a>
             </li>
         </ul>
     </div>
-    <script src="/ststic/kdqc/js/share.js"></script>
+    <script type="text/javascript">
+        var winHeight = typeof window.innerHeight != 'undefined' ? window.innerHeight : document.documentElement.clientHeight;
+        function loadHtml(){
+            var div = document.createElement('div');
+            div.id = 'weixin-tip';
+            div.innerHTML = '<p><img src="/ststic/kdqc/images/live_weixin.png" style="width:100%" alt="微信打开"/></p>';
+            document.body.appendChild(div);
+        }
+        
+        function loadStyleText(cssText) {
+            var style = document.createElement('style');
+            style.rel = 'stylesheet';
+            style.type = 'text/css';
+            try {
+                style.appendChild(document.createTextNode(cssText));
+            } catch (e) {
+                style.styleSheet.cssText = cssText; //ie9以下
+            }
+            var head=document.getElementsByTagName("head")[0]; //head标签之间加上style样式
+            head.appendChild(style); 
+        }
+        
+        var cssText = "#weixin-tip{position: fixed; left:0; top:0; background: rgba(0,0,0,0.8); filter:alpha(opacity=80); width: 100%; height:100%; z-index: 100;} #weixin-tip p{text-align: center; margin-top: 10%; padding:0 5%;}";
+
+        function openApp(){
+            var ua = navigator.userAgent.toLowerCase();
+            if (ua.match(/MicroMessenger/i) == "micromessenger") {
+                loadHtml();
+                loadStyleText(cssText);
+            }else{
+                {if stripos($agent, 'iphone') || stripos($agent, 'ipad')} 
+                    window.location.href = "qckds://";
+                    window.setTimeout(function(){window.location.href = "https://itunes.apple.com/us/app/pocket-auto-ca/id1309482351?l=zh&ls=1&mt=8";},2000);  
+                {else}
+                    window.location.href = "app://abc";
+                    window.setTimeout(function(){window.location.href = '{F:URL}/uploadfile/app/app1_0.apk';},2000);  
+                {/if} 
+            }
+        };
+    </script>
 </body>
 </html>
