--- a/appliaction/admin/view/content/shop/edit.html
+++ b/appliaction/admin/view/content/shop/edit.html
@@ -62,6 +62,19 @@
 								{/loop}
 							</div>
 						</div>
+						<div class="form-group radio" data-radio="{??$data['is_recommend']}">
+							<label class="control-label col-sm-3">店铺状态</label>
+							<div class="radio-inline">
+								<label>
+									<input type="radio" name="is_recommend"  value="1"> 推荐
+								</label>
+							</div>
+							<div class="radio-inline">
+								<label >
+									<input type="radio" name="is_recommend"  value="0"> 未推荐
+								</label>
+							</div>
+						</div>
 						<div class="form-group radio" data-radio="{??$data['is_ide']}">
 							<label class="control-label col-sm-3">认证状态：</label>
 							<div class="radio-inline">
